--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 node_modules/
+.pnp
+.pnp.js
 
 # Expo
 .expo/
@@ -31,8 +33,25 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
 
 # typescript
 *.tsbuildinfo
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# iOS
+ios/build/
+ios/Pods/
+
+# Android
+android/app/build/
+android/build/
+android/gradle/
+android/local.properties
 
 app-example
